--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                  <li class="nav-item active">
+                  <li class="nav-item activegi">
                     <a class="nav-link" href="#">Home</a>
                   </li>
                   <li class="nav-item">
