--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse navbar" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#">About</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="#">Contact</a>
