--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
