--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,15 @@
                 <input type="text" class="form-control" id="formEmailInput" placeholder="Email">
               </div>
     
+              
               <div class="form-group">
                 <label for="formMessageInput">Message</label>
-                <input type="text" class="form-control" id="formMessageInput" placeholder="Message">
-              </div>
+                <div class="input-group mb-2">
+                  <textarea class="form-control" placeholder="Message"></textarea>
+                </div>
+            </div>
+
+
               <button type="submit" class="btn btn-primary mb-2">Submit</button>
 
           </div>
@@ -76,7 +81,7 @@
 
         <div class="d-block d-sm-none">
 
-          <div class="m-0 pb-0">
+          <div class="m-0 pb-0 pt-1">
 
           <div class="form-group">
             <label for="formNameInput">Name</label>
@@ -90,8 +95,10 @@
 
           <div class="form-group">
             <label for="formMessageInput">Message</label>
-            <input type="text" class="form-control" id="formMessageInput" placeholder="Message">
-          </div>
+            <div class="input-group mb-2">
+              <textarea class="form-control" placeholder="Message"></textarea>
+            </div>
+        </div>
 
           <button type="submit" class="btn btn-primary mb-2">Submit</button>
 
