--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             
-      <a class="navbar-brand" href="#">Robert's Webpage</a>
+      <a class="navbar-brand" href="index.html">Robert VanScoy</a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,13 @@
               <div class="collapse navbar-collapse navbar" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="index.html">About</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="#">Portfolio</a>
+                    <a class="nav-link " href="portfolio.html">Portfolio</a>
                   </li>
                 </ul>
               </div>
