validated HTML and ensured all tags were closed and code follows best practices

--- a/portfolio.html
+++ b/portfolio.html
@@ -165,7 +165,7 @@
 
             <div class="row pt-3">
               <div class="col-md-3 pt-3 pb-3 bg-dark">
-                <img src="https://via.placeholder.com/350"alt="placeholder">
+                <img src="https://via.placeholder.com/350" alt="placeholder">
               </div>
             </div>
 
@@ -202,10 +202,6 @@
               </div>
             </div>
           </div>
-        
-        
-        </body>
-    </html>
-
+      </div>
     </body>
 </html>
