--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Home</title>
+       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
    </head>
    <body class="margin:0">
@@ -32,7 +33,7 @@
       <div class="d-none d-xl-block">
          <div class="container">
             <div class="m-5 pb-5">
-               <article class="pt-5 pb-5 ml-5 mb-5">
+               <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
                   <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="350" height="350" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
@@ -46,7 +47,7 @@
       <div class="d-none d-lg-block d-xl-none">
          <div class="container">
             <div class="m-5 pb-5">
-               <article class="pt-5 pb-5 ml-5 mb-5">
+               <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
                   <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="300" height="300" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
@@ -60,7 +61,7 @@
       <div class="d-none d-md-block d-lg-none">
          <div class="container">
             <div class="m-5 pb-5">
-               <article class="pt-5 pb-5 ml-5 mb-5">
+               <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
                   <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="250" height="250" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
@@ -74,7 +75,7 @@
       <div class="d-none d-sm-block d-md-none">
          <div class="container">
             <div class="m-5 pb-5">
-               <article class="pt-5 pb-5 ml-5 mb-5">
+               <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
                   <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="200" height="200" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
@@ -87,7 +88,7 @@
       </div>
       <div class="d-block d-sm-none">
          <div class="container">
-            <div class="pt-5 pb-5 ml-5 mb-5">
+            <div class="pt-5 pb-5 ml-5 mb-5 ">
                <article class="mt-3 pb-5">
                   <h1>About Me</h1>
                   <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="150" height="150" style="margin-right: 3px;">
