began to add functionality for portfolio generation

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,10 @@
          <div class="d-none d-xl-block">
             <div class="row pt-3">
                <div class="col-md-5 pt-3 pb-3 m-5 bg-dark">
-                  <img src="https://via.placeholder.com/350" alt="placeholder">
+                  <a href="https://vanscoyro.github.io/password_generator/">
+                     <img src="assets/pw_generator.PNG" alt="placeholder" class="float-left">
+                  </a>   
+                  <p>Simple password generator program that prompts user for preference then generates a password based on input</p>
                </div>
                <div class="col-md-5 pt-3 pb-3 m-5 bg-dark">
                   <img src="https://via.placeholder.com/350" alt="placeholder">
@@ -60,7 +63,10 @@
          <div class="d-none d-lg-block d-xl-none">
             <div class="row pt-3 ">
                <div class="col-md-5 pt-5 pb-5 ml-5 mb-5 mt-5 bg-dark">
-                  <img src="https://via.placeholder.com/350" class="mx-auto d-block" alt="placeholder">
+                  <a href="https://vanscoyro.github.io/password_generator/">
+                     <img src="assets/pw_generator.PNG" alt="placeholder" class="float-left">
+                  </a>   
+                  <p>Simple password generator program that prompts user for preference then generates a password based on input</p>
                </div>
                <div class="col-md-5 pt-5 pb-5 ml-5 mb-5 mt-5 bg-dark">
                   <img src="https://via.placeholder.com/350" class="mx-auto d-block" alt="placeholder">
@@ -84,8 +90,10 @@
          <div class="d-none d-md-block d-lg-none">
             <div class="container pt-3 pb-3">
                <div class="col pt-3 pb-3 bg-dark text-right">
-                  <img src="https://via.placeholder.com/350" alt="placeholder">
-                  <p class="text-white float-left pt-5 m-5 pl-5">Project 1</p>
+                  <a href="https://vanscoyro.github.io/password_generator/">
+                     <img src="assets/pw_generator.PNG" alt="placeholder" class="float-left">
+                  </a>   
+                  <p class="pt-5 m-5 pb-3 pl-5">Simple password generator program that prompts user for preference then generates a password based on input</p>
                </div>
                <div class="col pt-3 pb-3 bg-light">
                   <img src="https://via.placeholder.com/350" alt="placeholder">
@@ -110,7 +118,10 @@
             <div class="container">
                <div class="row pt-3">
                   <div class="col-md-3 pt-3 pb-3 bg-dark">
-                     <img src="https://via.placeholder.com/350" alt="placeholder">
+                     <a href="https://vanscoyro.github.io/password_generator/">
+                        <img src="assets/pw_generator.PNG" alt="placeholder" class="float-left">
+                     </a>   
+                     <p>Simple password generator program that prompts user for preference then generates a password based on input</p>
                   </div>
                </div>
                <div class="row pt-3">
@@ -140,8 +151,10 @@
             <div class="container pt-3 pb-3">
                <div class="row">
                   <div class="col pt-3 pb-3 mr-2 ml-2 mb-3 mt-5 bg-dark">
-                     <img src="https://via.placeholder.com/350" alt="placeholder">
-                     <p class="text-white pt-3 text-center">Project 1</p>
+                     <a href="https://vanscoyro.github.io/password_generator/">
+                        <img src="assets/pw_generator.PNG" alt="placeholder" class="float-left">
+                     </a>   
+                     <p class="pt-3">Simple password generator program that prompts user for preference then generates a password based on input</p>
                   </div>
                   <div class="col pt-3 pb-3 mr-2 ml-2 mb-3 mt-5 bg-light">
                      <img src="https://via.placeholder.com/350" alt="placeholder">
