--- a/develop/index.html
+++ b/develop/index.html
@@ -35,7 +35,7 @@
             <div class="m-5 pb-5">
                <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
-                  <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="350" height="350" style="margin-right: 20px;">
+                  <img src="../assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="350" height="350" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
                      more about the wonderful world of Web Development. Please feel free to explore my site and check out my portfolio. If you want to contact me, please feel
                      to submit an email through the contact form. Hope to hear from you soon!
@@ -49,7 +49,7 @@
             <div class="m-5 pb-5">
                <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
-                  <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="300" height="300" style="margin-right: 20px;">
+                  <img src="../assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="300" height="300" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
                      more about the wonderful world of Web Development. Please feel free to explore my site and check out my portfolio. If you want to contact me, please feel
                      to submit an email through the contact form. Hope to hear from you soon!
@@ -63,7 +63,7 @@
             <div class="m-5 pb-5">
                <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
-                  <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="250" height="250" style="margin-right: 20px;">
+                  <img src="../assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="250" height="250" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
                      more about the wonderful world of Web Development. Please feel free to explore my site and check out my portfolio. If you want to contact me, please feel
                      to submit an email through the contact form. Hope to hear from you soon!
@@ -77,7 +77,7 @@
             <div class="m-5 pb-5">
                <article class="pt-5 pb-5 ml-5 mb-5 ">
                   <h1>About Me</h1>
-                  <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="200" height="200" style="margin-right: 20px;">
+                  <img src="../assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="200" height="200" style="margin-right: 20px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
                      more about the wonderful world of Web Development. Please feel free to explore my site and check out my portfolio. If you want to contact me, please feel
                      to submit an email through the contact form. Hope to hear from you soon!
@@ -91,7 +91,7 @@
             <div class="pt-5 pb-5 ml-5 mb-5 ">
                <article class="mt-3 pb-5">
                   <h1>About Me</h1>
-                  <img src="assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="150" height="150" style="margin-right: 3px;">
+                  <img src="../assets/rob-pic.jpg" alt="robert with his dog" class="rounded-circle float-left" width="150" height="150" style="margin-right: 3px;">
                   <p>Hello! My name is Robert VanScoy and I'm starting my tech career as a web developer. I would love to work on new projects and learn
                      more about the wonderful world of Web Development. Please feel free to explore my site and check out my portfolio. If you want to contact me, please feel
                      to submit an email through the contact form. Hope to hear from you soon!
